# supervised-lda

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  bash_completion.sh  mkdocs.yml  slda.cpp
bench/: bench_compute_approximate_phi.cpp  bench_compute_h.cpp  bench_compute_supervised_phi_gamma.cpp  bench_compute_unsupervised_phi.cpp  bench_fixed_point_iteration.cpp
cmake/: FindBashCompletion.cmake  FindDocopt.cmake  FindEigen.cmake
docs/: getting-started.md  index.md  parameters.md
docs/custom_theme/: base.html  nav.html
docs/custom_theme/css/: base.css  theme.css
docs/custom_theme/js/: base.js  hypher-en-us.json
docs/site/: console-applications.md  console_applications.md  corpus_documents.md  getting-started.md  index.md  installation.md  mnist-example.md  parameters.md  topic-inference-visualization.md
docs/site/files/topic-inference-visualization/: fetch_data.py
include/: ApproximatedSupervisedEStep.hpp  CorrespondenceSupervisedEStep.hpp  CorrespondenceSupervisedMStep.hpp  Document.hpp  Events.hpp  FastSupervisedEStep.hpp  FastUnsupervisedEStep.hpp  GradientDescent.hpp  IEStep.hpp  IInitialization.hpp  IMStep.hpp  ISerializable.hpp  Initialize.hpp  InternalsFactory.hpp  LDA.hpp  LDABuilder.hpp  MatrixProblem.hpp  MultinomialLogisticRegression.hpp  MultinomialSupervisedEStep.hpp  MultinomialSupervisedMStep.hpp  NumpyFormat.hpp  OnlineSupervisedMStep.hpp  Parameters.hpp  ProgressEvents.hpp  ProgressVisitor.hpp  SecondOrderLogisticRegressionApproximation.hpp  SecondOrderSupervisedMStep.hpp  SeededInitialization.hpp  SemiSupervisedEStep.hpp  SemiSupervisedMStep.hpp  SupervisedEStep.hpp  SupervisedLDA.hpp  SupervisedMStep.hpp  UnsupervisedEStep.hpp  UnsupervisedMStep.hpp  e_step_utils.hpp  initialize.hpp  utils.hpp
include/applications/: EpochProgress.hpp  ExpectationProgress.hpp  MaximizationProgress.hpp  SnapshotEvery.hpp  lda_io.hpp  utils.hpp
include/ldaplusplus/: ApproximatedSupervisedEStep.hpp  CorrespondenceSupervisedEStep.hpp  CorrespondenceSupervisedMStep.hpp  Document.hpp  Events.hpp  FastSupervisedEStep.hpp  FastUnsupervisedEStep.hpp  GradientDescent.hpp  IEStep.hpp  IMStep.hpp  LDA.hpp  LDABuilder.hpp  MultinomialSupervisedEStep.hpp  MultinomialSupervisedMStep.hpp  NumpyFormat.hpp  OnlineSupervisedMStep.hpp  Parameters.hpp  ProgressEvents.hpp  SecondOrderSupervisedMStep.hpp  SemiSupervisedEStep.hpp  SemiSupervisedMStep.hpp  SupervisedEStep.hpp  SupervisedMStep.hpp  UnsupervisedEStep.hpp  UnsupervisedMStep.hpp  e_step_utils.hpp  initialize.hpp  utils.hpp
include/ldaplusplus/em/: AbstractEStep.hpp  ApproximatedSupervisedEStep.hpp  CorrespondenceSupervisedEStep.hpp  CorrespondenceSupervisedMStep.hpp  EStepInterface.hpp  FastOnlineSupervisedMStep.hpp  FastSupervisedEStep.hpp  FastSupervisedMStep.hpp  FastUnsupervisedEStep.hpp  IEStep.hpp  IMStep.hpp  MStepInterface.hpp  MultinomialSupervisedEStep.hpp  MultinomialSupervisedMStep.hpp  OnlineSupervisedMStep.hpp  SecondOrderSupervisedMStep.hpp  SemiSupervisedEStep.hpp  SemiSupervisedMStep.hpp  SupervisedEStep.hpp  SupervisedMStep.hpp  UnsupervisedEStep.hpp  UnsupervisedMStep.hpp
include/ldaplusplus/events/: Events.hpp  ProgressEvents.hpp
include/ldaplusplus/optimization/: GradientDescent.hpp  MultinomialLogisticRegression.hpp  SecondOrderLogisticRegressionApproximation.hpp
include/test/: utils.hpp
src/: ApproximatedSupervisedEStep.cpp  CorrespondenceSupervisedEStep.cpp  CorrespondenceSupervisedMStep.cpp  Document.cpp  Events.cpp  FastSupervisedEStep.cpp  FastUnsupervisedEStep.cpp  Initialize.cpp  InternalsFactory.cpp  LDA.cpp  LDABuilder.cpp  MultinomialLogisticRegression.cpp  MultinomialSupervisedEStep.cpp  MultinomialSupervisedMStep.cpp  OnlineSupervisedMStep.cpp  SecondOrderLogisticRegressionApproximation.cpp  SecondOrderSupervisedMStep.cpp  SeededInitialization.cpp  SemiSupervisedEStep.cpp  SemiSupervisedMStep.cpp  SupervisedEStep.cpp  SupervisedLDA.cpp  SupervisedMStep.cpp  UnsupervisedEStep.cpp  UnsupervisedMStep.cpp  e_step_utils.cpp  initialize.cpp
src/applications/: EpochProgress.cpp  ExpectationProgress.cpp  MaximizationProgress.cpp  SnapshotEvery.cpp  fslda.cpp  lda.cpp  lda_io.cpp  slda.cpp  unsupervised_lda.cpp  utils.cpp
src/ldaplusplus/: ApproximatedSupervisedEStep.cpp  CorrespondenceSupervisedEStep.cpp  CorrespondenceSupervisedMStep.cpp  Document.cpp  Events.cpp  FastSupervisedEStep.cpp  FastUnsupervisedEStep.cpp  LDA.cpp  LDABuilder.cpp  MultinomialLogisticRegression.cpp  MultinomialSupervisedEStep.cpp  MultinomialSupervisedMStep.cpp  OnlineSupervisedMStep.cpp  SecondOrderLogisticRegressionApproximation.cpp  SecondOrderSupervisedMStep.cpp  SemiSupervisedEStep.cpp  SemiSupervisedMStep.cpp  SupervisedEStep.cpp  SupervisedMStep.cpp  UnsupervisedEStep.cpp  UnsupervisedMStep.cpp  e_step_utils.cpp  initialize.cpp
src/ldaplusplus/em/: AbstractEStep.cpp  ApproximatedSupervisedEStep.cpp  CorrespondenceSupervisedEStep.cpp  CorrespondenceSupervisedMStep.cpp  FastOnlineSupervisedMStep.cpp  FastSupervisedEStep.cpp  FastSupervisedMStep.cpp  FastUnsupervisedEStep.cpp  MultinomialSupervisedEStep.cpp  MultinomialSupervisedMStep.cpp  OnlineSupervisedMStep.cpp  SecondOrderSupervisedMStep.cpp  SemiSupervisedEStep.cpp  SemiSupervisedMStep.cpp  SupervisedEStep.cpp  SupervisedMStep.cpp  UnsupervisedEStep.cpp  UnsupervisedMStep.cpp
src/ldaplusplus/events/: Events.cpp
src/ldaplusplus/optimization/: MultinomialLogisticRegression.cpp  SecondOrderLogisticRegressionApproximation.cpp
test/: test_approximate_supervised_expectation_step.cpp  test_corpus.cpp  test_correspondence_supervised_expectation_step.cpp  test_correspondence_supervised_maximization_step.cpp  test_expectation_step.cpp  test_fit.cpp  test_maximization_step.cpp  test_mlr.cpp  test_multinomial_supervised_expectation_step.cpp  test_multinomial_supervised_maximization_step.cpp  test_numpy_data.cpp  test_online_maximization_step.cpp  test_second_order_mlr_approximation.cpp
